src/test/ui/consts/const-int-unchecked.stderr
error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:14:29
   |
LL | const SHL_U8: u8 = unsafe { intrinsics::unchecked_shl(5_u8, 8) };
   | ----------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                             |
   |                             Overflowing shift by 8 in unchecked_shl
   |
   = note: #[deny(const_err)] on by default

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:16:31
   |
LL | const SHL_U16: u16 = unsafe { intrinsics::unchecked_shl(5_u16, 16) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 16 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:18:31
   |
LL | const SHL_U32: u32 = unsafe { intrinsics::unchecked_shl(5_u32, 32) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 32 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:20:31
   |
LL | const SHL_U64: u64 = unsafe { intrinsics::unchecked_shl(5_u64, 64) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 64 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:22:33
   |
LL | const SHL_U128: u128 = unsafe { intrinsics::unchecked_shl(5_u128, 128) };
   | --------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                 |
   |                                 Overflowing shift by 128 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:27:29
   |
LL | const SHL_I8: i8 = unsafe { intrinsics::unchecked_shl(5_i8, 8) };
   | ----------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                             |
   |                             Overflowing shift by 8 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:29:31
   |
LL | const SHL_I16: i16 = unsafe { intrinsics::unchecked_shl(5_16, 16) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 16 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:31:31
   |
LL | const SHL_I32: i32 = unsafe { intrinsics::unchecked_shl(5_i32, 32) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 32 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:33:31
   |
LL | const SHL_I64: i64 = unsafe { intrinsics::unchecked_shl(5_i64, 64) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 64 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:35:33
   |
LL | const SHL_I128: i128 = unsafe { intrinsics::unchecked_shl(5_i128, 128) };
   | --------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                 |
   |                                 Overflowing shift by 128 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:40:33
   |
LL | const SHL_I8_NEG: i8 = unsafe { intrinsics::unchecked_shl(5_i8, -1) };
   | --------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                 |
   |                                 Overflowing shift by 255 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:42:35
   |
LL | const SHL_I16_NEG: i16 = unsafe { intrinsics::unchecked_shl(5_16, -1) };
   | ----------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                   |
   |                                   Overflowing shift by 65535 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:44:35
   |
LL | const SHL_I32_NEG: i32 = unsafe { intrinsics::unchecked_shl(5_i32, -1) };
   | ----------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                   |
   |                                   Overflowing shift by 4294967295 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:46:35
   |
LL | const SHL_I64_NEG: i64 = unsafe { intrinsics::unchecked_shl(5_i64, -1) };
   | ----------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                   |
   |                                   Overflowing shift by 18446744073709551615 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:48:37
   |
LL | const SHL_I128_NEG: i128 = unsafe { intrinsics::unchecked_shl(5_i128, -1) };
   | ------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                     |
   |                                     Overflowing shift by 340282366920938463463374607431768211455 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:54:40
   |
LL | const SHL_I8_NEG_RANDOM: i8 = unsafe { intrinsics::unchecked_shl(5_i8, -6) };
   | ---------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                        |
   |                                        Overflowing shift by 250 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:56:42
   |
LL | const SHL_I16_NEG_RANDOM: i16 = unsafe { intrinsics::unchecked_shl(5_16, -13) };
   | -----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                          |
   |                                          Overflowing shift by 65523 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:58:42
   |
LL | const SHL_I32_NEG_RANDOM: i32 = unsafe { intrinsics::unchecked_shl(5_i32, -25) };
   | -----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                          |
   |                                          Overflowing shift by 4294967271 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:60:42
   |
LL | const SHL_I64_NEG_RANDOM: i64 = unsafe { intrinsics::unchecked_shl(5_i64, -30) };
   | -----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                          |
   |                                          Overflowing shift by 18446744073709551586 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:62:44
   |
LL | const SHL_I128_NEG_RANDOM: i128 = unsafe { intrinsics::unchecked_shl(5_i128, -93) };
   | -------------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                            |
   |                                            Overflowing shift by 340282366920938463463374607431768211363 in unchecked_shl

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:69:29
   |
LL | const SHR_U8: u8 = unsafe { intrinsics::unchecked_shr(5_u8, 8) };
   | ----------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                             |
   |                             Overflowing shift by 8 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:71:31
   |
LL | const SHR_U16: u16 = unsafe { intrinsics::unchecked_shr(5_u16, 16) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 16 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:73:31
   |
LL | const SHR_U32: u32 = unsafe { intrinsics::unchecked_shr(5_u32, 32) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 32 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:75:31
   |
LL | const SHR_U64: u64 = unsafe { intrinsics::unchecked_shr(5_u64, 64) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 64 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:77:33
   |
LL | const SHR_U128: u128 = unsafe { intrinsics::unchecked_shr(5_u128, 128) };
   | --------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                 |
   |                                 Overflowing shift by 128 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:82:29
   |
LL | const SHR_I8: i8 = unsafe { intrinsics::unchecked_shr(5_i8, 8) };
   | ----------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                             |
   |                             Overflowing shift by 8 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:84:31
   |
LL | const SHR_I16: i16 = unsafe { intrinsics::unchecked_shr(5_16, 16) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 16 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:86:31
   |
LL | const SHR_I32: i32 = unsafe { intrinsics::unchecked_shr(5_i32, 32) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 32 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:88:31
   |
LL | const SHR_I64: i64 = unsafe { intrinsics::unchecked_shr(5_i64, 64) };
   | ------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                               |
   |                               Overflowing shift by 64 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:90:33
   |
LL | const SHR_I128: i128 = unsafe { intrinsics::unchecked_shr(5_i128, 128) };
   | --------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                 |
   |                                 Overflowing shift by 128 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:95:33
   |
LL | const SHR_I8_NEG: i8 = unsafe { intrinsics::unchecked_shr(5_i8, -1) };
   | --------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                 |
   |                                 Overflowing shift by 255 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:97:35
   |
LL | const SHR_I16_NEG: i16 = unsafe { intrinsics::unchecked_shr(5_16, -1) };
   | ----------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                   |
   |                                   Overflowing shift by 65535 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:99:35
   |
LL | const SHR_I32_NEG: i32 = unsafe { intrinsics::unchecked_shr(5_i32, -1) };
   | ----------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                   |
   |                                   Overflowing shift by 4294967295 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:101:35
   |
LL | const SHR_I64_NEG: i64 = unsafe { intrinsics::unchecked_shr(5_i64, -1) };
   | ----------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                   |
   |                                   Overflowing shift by 18446744073709551615 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:103:37
   |
LL | const SHR_I128_NEG: i128 = unsafe { intrinsics::unchecked_shr(5_i128, -1) };
   | ------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                     |
   |                                     Overflowing shift by 340282366920938463463374607431768211455 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:109:40
   |
LL | const SHR_I8_NEG_RANDOM: i8 = unsafe { intrinsics::unchecked_shr(5_i8, -6) };
   | ---------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                        |
   |                                        Overflowing shift by 250 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:111:42
   |
LL | const SHR_I16_NEG_RANDOM: i16 = unsafe { intrinsics::unchecked_shr(5_16, -13) };
   | -----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                          |
   |                                          Overflowing shift by 65523 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:113:42
   |
LL | const SHR_I32_NEG_RANDOM: i32 = unsafe { intrinsics::unchecked_shr(5_i32, -25) };
   | -----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                          |
   |                                          Overflowing shift by 4294967271 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:115:42
   |
LL | const SHR_I64_NEG_RANDOM: i64 = unsafe { intrinsics::unchecked_shr(5_i64, -30) };
   | -----------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                          |
   |                                          Overflowing shift by 18446744073709551586 in unchecked_shr

error: any use of this value will cause an error
  --> $DIR/const-int-unchecked.rs:117:44
   |
LL | const SHR_I128_NEG_RANDOM: i128 = unsafe { intrinsics::unchecked_shr(5_i128, -93) };
   | -------------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---
   |                                            |
   |                                            Overflowing shift by 340282366920938463463374607431768211363 in unchecked_shr

error: aborting due to 40 previous errors

